TestDocker/sg/sg.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: SecurityGroup for TestDocker

Parameters:
  SystemName:
    Type: String
    Default: xxxx
    AllowedPattern: '[a-zA-Z0-9-]*'
  EnvType:
    Description: Environment type.
    Type: String
    Default: dev
    AllowedValues: [all, dev, stg, prod]
    ConstraintDescription: must specify all, dev, stg, or prod.

Mappings:
  AzMap:
    ap-northeast-1:
      1st: ap-northeast-1a
      2nd: ap-northeast-1c
      3nd: ap-northeast-1d

Resources:
  # SecurityGroup for ECS
  SecurityGroupECS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub
        - ${SystemName}-${EnvType}-ecs-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      GroupName: !Sub
        - ${SystemName}-${EnvType}-ecs-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      SecurityGroupIngress:
        - Description: 'HTTP'
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - Description: 'HTTPS'
          CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
      VpcId:
        Fn::ImportValue: !Sub
          - ${SystemName}-${EnvType}-vpc
          - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      Tags:
        - Key: Name
          Value: !Sub
            - ${SystemName}-${EnvType}-ecs-sg
            - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
        - Key: SystemName
          Value: !Ref SystemName
        - Key: EnvType
          Value: !Ref EnvType

Outputs:
  SecurityGroupECS:
    Value: !Ref SecurityGroupECS
    Export:
      Name: !Sub
        - ${SystemName}-${EnvType}-ecs-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
